# qrcode_advisor

./: .dockerignore  Dockerfile.prod  LICENSE  README.md  docker-compose.yaml
.devcontainer/client/: devcontainer.json
.devcontainer/server/: devcontainer.json
.github/workflows/: docker-build-push.yaml
client/: Dockerfile  package.json  svelte.config.js  vite.config.ts
client/src/: app.html
client/src/lib/: notification.ts
client/src/lib/components/: Confirm.svelte  Notification.svelte
client/src/lib/openapi/: models.ts  schemas.ts  services.ts
client/src/lib/openapi/core/: OpenAPI.ts
client/src/routes/: +layout.svelte  +layout.ts  +page.svelte
client/src/routes/admin/: +page.svelte
client/src/routes/qr/: +page.svelte  +page.ts
client/src/routes/result/: +page.svelte  +page.ts
client/src/routes/search/: +page.svelte
client/src/routes/signin/: +page.svelte
client/src/routes/signup/: +page.svelte
server/: Dockerfile  docker-entrypoint.sh  getdata.py  pyproject.toml
server/changeme/: __init__.py  db.py  exceptions.py
server/changeme/models/db/: __init__.py  user.py
server/changeme/models/response/: user.py
server/changeme/routes/: __init__.py  auth.py
server/migrations/models/: 1_20240920152811_update.py  2_20241105071244_update.py  3_20241108025238_update.py  4_20241112073058_add_LineStop.py  5_20241116085156_update.py  6_20241126054517_update.py  7_20241210064856_update.py  8_20250107070506_update.py
server/qradviser/: __init__.py  config.py
server/qradviser/models/db/: __init__.py  array_fields.py  line.py  line_to_stop.py  stop.py
server/qradviser/models/request/: auth.py  user.py
server/qradviser/models/response/: admin.py  checkstop.py  search.py
server/qradviser/routes/: __init__.py  admin.py  bus.py  checkstop.py  search.py
